# imgw-pib

./: .pre-commit-config.yaml  AGENTS.md  README.md  example.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/workflows/: check-alerts.yml  ci.yml  codeql.yml  pr-labels.yml  pre-commit-update.yml  publish.yml  release-drafter.yml  stale.yml  test.yml
imgw_pib/: __init__.py  const.py  exceptions.py  model.py  utils.py
imgw_pib/data/: proxy_weather_stations.json  rivers.json  weather_stations.json  weather_stations_coordinates.json  weather_stations_info.json
scripts/: check_alerts.py  setup-devcontainer-env.sh  setup-local-env.sh
tests/: __init__.py  conftest.py  test_init.py  test_utils.py
tests/fixtures/: hydrological_alerts.json  hydrological_details.json  hydrological_details_2.json  hydrological_station.json  hydrological_station_no_location.json  hydrological_stations.json  weather_alerts.json  weather_station.json  weather_station_proxy.json  weather_stations.json
tests/snapshots/: test_init.ambr
