[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imgw_pib"
version = "0.0.0"
license = "Apache-2.0"
description = "Python wrapper for IMGW-PIB API."
readme = "README.md"
authors = [{name = "Maciej Bieniek"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
  "aiofiles",
  "aiohttp>=3.9.4",
  "orjson",
  "yarl",
]

[project.optional-dependencies]
test = [
  "aioresponses==0.7.8",
  "coverage==7.10.5",
  "freezegun==1.5.5",
  "mypy==1.17.1",
  "pytest-asyncio==1.1.0",
  "pytest-cov==6.2.1",
  "pytest-error-for-skips==2.0.2",
  "pytest-timeout==2.4.0",
  "pytest==8.4.1",
  "ruff==0.12.9",
  "syrupy==4.9.1",
  "types-aiofiles",
]
dev = [
  "pre-commit==4.3.0",
]

[project.urls]
Homepage = "https://github.com/bieniu/imgw-pib"

[tool.setuptools.packages.find]
include = ["imgw_pib*"]

[tool.setuptools.package-data]
"imgw_pib" = ["data/*.json"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
python_version = "3.13"
show_error_codes = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true

[tool.ruff]
target-version = "py313"

lint.select = ["ALL"]

lint.ignore = [
    "COM812",   # Trailing comma missing
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "FBT001",   # Boolean-typed positional argument in function definition
    "FBT002",   # Boolean default positional argument in function definition
    "FBT003",   # Boolean positional value in function call
    "TC006",    # Add quotes to type expression in `typing.cast()`
]

[tool.ruff.lint.per-file-ignores]
"example.py" = [
    "T201",      # `print` found
]
"tests/*" = [
    "FBT001",    # Boolean-typed positional argument in function definition
    "PLR0913",   # Too many arguments in function definition
    "S101",      # Use of `assert` detected
]


[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.coverage.run]
source = ["imgw_pib"]

[tool.tox]
legacy_tox_ini = """

[tox]
envlist = py312, py313, lint, typing, coverage
skip_missing_interpreters = True

[gh-actions]
python =
  3.12: py312, lint, typing, coverage
  3.13: py313

[testenv]
commands =
  pytest --timeout=30 --cov=imgw_pib --cov-report=xml {posargs} --error-for-skips
deps =
  .[test]

[testenv:lint]
basepython = python3
depends = py312
ignore_errors = True
skip_install = True
usedevelop = False
commands =
  ruff check .
  ruff format --check .

[testenv:typing]
basepython = python3
depends = py312
ignore_errors = True
skip_install = True
usedevelop = False
commands =
  mypy imgw_pib

[testenv:coverage]
basepython = python3
depends = py312
skip_install = True
usedevelop = False
commands =
  coverage report --fail-under=79
"""
