[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imgw_pib"
version = "0.0.0"
license = "Apache-2.0"
description = "Python wrapper for IMGW-PIB API."
readme = "README.md"
authors = [{name = "Maciej Bieniek"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
  "aiofiles",
  "aiohttp>=3.9.4",
  "orjson",
  "yarl",
]

[dependency-groups]
dev = [
  "aioresponses==0.7.8",
  "freezegun==1.5.5",
  "prek==0.3.1",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "pytest-error-for-skips==2.0.2",
  "pytest-timeout==2.4.0",
  "pytest==9.0.2",
  "ruff==0.14.14",
  "syrupy==5.1.0",
  "ty==0.0.14",
  "types-aiofiles",
]

[project.urls]
Homepage = "https://github.com/bieniu/imgw-pib"

[tool.setuptools.packages.find]
include = ["imgw_pib*"]

[tool.setuptools.package-data]
"imgw_pib" = ["data/*.json"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
target-version = "py313"

lint.select = ["ALL"]

lint.ignore = [
    "COM812",   # Trailing comma missing
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "FBT001",   # Boolean-typed positional argument in function definition
    "FBT002",   # Boolean default positional argument in function definition
    "FBT003",   # Boolean positional value in function call
    "TC002",    # Move third-party import into a type-checking block
    "TC003",    # Move standard library import into a type-checking block
    "TC006",    # Add quotes to type expression in `typing.cast()`
]

[tool.ruff.lint.per-file-ignores]
"example.py" = [
    "T201",     # `print` found
]
"tests/*" = [
    "PLR0913",  # Too many arguments in function definition
    "S101",     # Use of `assert` detected
]


[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ty.environment]
python-version = "3.13"
